# fastapi_fundation

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/01_intro/: 01_what_is_fastapi.ipynb  02_installation.ipynb  03_hello_world.ipynb  04_first_api.ipynb  README.md
notebooks/02_basics/: 01_type_hints.ipynb  02_pydantic.ipynb  03_dependency_injection.ipynb  README.md
tests/: main.py
