[project]
name = "fastapi-foundation"
version = "1.0.0"
description = "FastAPI 基礎教材 - 給程式新手的循序漸進教學專案"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "bheadwei", email = "bheadwei0910@gmail.com" }
]
keywords = ["fastapi", "tutorial", "python", "api", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Education",
]

dependencies = [
    # FastAPI 核心
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # 資料驗證
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # 資料庫 - SQL
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0", # SQLite 非同步支援
    "asyncpg>=0.30.0", # PostgreSQL 非同步支援
    # 資料庫 - NoSQL
    "motor>=3.6.0", # MongoDB 非同步支援
    "pymongo>=4.10.0",
    # 認證與安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17", # 表單與檔案上傳
    # HTTP 客戶端
    "httpx>=0.28.0",
    # Jupyter 教學環境
    "jupyter>=1.1.0",
    "notebook>=7.3.0",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
dev = [
    # 測試
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",

    # 程式碼品質
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    # 開發工具
    "pre-commit>=4.0.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/bheadwei/fastapi_foundation"
Documentation = "https://github.com/bheadwei/fastapi_foundation#readme"
Repository = "https://github.com/bheadwei/fastapi_foundation.git"
Issues = "https://github.com/bheadwei/fastapi_foundation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
